...
    [navigateMenu addItemWithTitle:@"Home" action:@selector(navigateHome:) keyEquivalent:@"1"];
    [navigateMenu addItemWithTitle:@"Channels" action:@selector(navigateChannels:) keyEquivalent:@"2"];
    [navigateMenu addItemWithTitle:@"Repositories" action:@selector(navigateRepos:) keyEquivalent:@"3"];
    [mainMenu setSubmenu:navigateMenu forItem:navigateMenuItem];

    // Window menu
    NSMenuItem *windowMenuItem = [mainMenu addItemWithTitle:@"Window" action:NULL keyEquivalent:@""];
    NSMenu *windowMenu = [[NSMenu alloc] initWithTitle:@"Window"];
    [windowMenu addItemWithTitle:@"Manage Rooms" action:@selector(manageRooms:) keyEquivalent:@"R"];
    [windowMenu addItem:[NSMenuItem separatorItem]];
    [mainMenu setSubmenu:windowMenu forItem:windowMenuItem];
    [NSApp setWindowsMenu:windowMenu];

    // Help menu
    NSMenuItem *helpMenuItem = [mainMenu addItemWithTitle:@"Help" action:NULL keyEquivalent:@""];
...
